Fix bug - new game button text overflow with button borders

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ body {
     .buttons {
         height: 2.5rem;
         width: 6rem;
-        font-size: large;
+        font-size: medium;
     }
 
     #scoreArea {
